--- a/src/app/listing/page.scss
+++ b/src/app/listing/page.scss
@@ -3,14 +3,25 @@
 .page-listing {
   .media-listing {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(15rem, 1fr));
+    align-items: flex-start;
     gap: 0.5rem;
     margin-top: $spacingQuarter;
 
     &__item {
+      position: relative;
+      padding-bottom: 100%;
       box-shadow: 0 0 0 1px #aaa;
       border-radius: 0.5rem;
-      padding: 0.5rem;
+      overflow: hidden;
+
+      img {
+        position: absolute;
+        inset: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
     }
   }
 }
