--- a/src/app/upload/UploadForm.module.scss
+++ b/src/app/upload/UploadForm.module.scss
@@ -5,21 +5,21 @@
     text-align: center;
     font-style: italic;
     padding: $spacing;
-    border: 2px dashed #aaa;
+    border: 2px dashed $colorBorder;
     border-radius: $spacingQuarter;
     cursor: pointer;
     transition: 0.2s;
 
     &--dragging {
-      background-color: #ccc;
+      background-color: $colorBg2;
     }
 
     &:hover {
-      background-color: #ddd;
+      background-color: $colorBg2;
     }
   }
 
-  .upload-list {
+  .uploadList {
     margin-top: $spacingHalf;
 
     &__item {
@@ -33,15 +33,15 @@
       width: 12rem;
       max-width: 100%;
       height: 0.4rem;
-      box-shadow: 0 0 0 1px #aaa;
+      box-shadow: 0 0 0 1px $colorBorder;
       border-radius: 0.2rem;
       overflow: hidden;
-      margin-bottom: 0.2rem;
+      margin-bottom: 0.3rem;
     }
 
-    &__progress-bar {
+    &__progressBar {
       height: 100%;
-      background-color: #ccc;
+      background-color: $colorContent;
     }
   }
 }
