--- a/src/app/listing/PostItem.module.scss
+++ b/src/app/listing/PostItem.module.scss
@@ -1,6 +1,7 @@
 @use "/src/scss/variables" as *;
 
 .PostItem {
+  position: relative;
   padding: 0.5rem;
   box-shadow: 0 0 0 1px $colorBorder;
   border-radius: 0.5rem;
@@ -30,5 +31,20 @@
   .postName {
     font-size: 0.8rem;
     text-align: center;
+  }
+
+  .postDelete {
+    position: absolute;
+    top: 0.3rem;
+    right: 0.3rem;
+    width: 1rem;
+    height: 1rem;
+    color: #f31;
+    opacity: 0;
+    transition: 0.2s;
+  }
+
+  &:hover .postDelete {
+    opacity: 1;
   }
 }
