--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -30,6 +30,8 @@ $resTablet: 900px;
 $resPhone: 450px;
 
 $colorContent: #eee;
+$colorWarning: #f52;
+$colorWarningBg: #300;
 
 $colorBg: #111;
 $colorBg2: #000;
