--- a/src/app/listing/MediaPanel.module.scss
+++ b/src/app/listing/MediaPanel.module.scss
@@ -27,6 +27,7 @@
     width: 1.5rem;
     height: 1.5rem;
     background-color: $colorBg;
+    border: 1px solid $colorBorder;
     opacity: 0;
     transition: 0.2s;
 
@@ -44,6 +45,7 @@
     width: 1.5rem;
     height: 1.5rem;
     background-color: $colorBg;
+    border: 1px solid $colorBorder;
     transition: 0.2s;
 
     &:hover {
@@ -63,18 +65,59 @@
   }
 }
 
+.edit {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+
+  .tagList {
+    display: block;
+    width: 100%;
+    resize: vertical;
+    min-height: 10rem;
+    height: 10rem;
+    padding: 0.2rem 0.5rem;
+    font-family: monospace;
+    border: 1px solid $colorBorder;
+
+    &.tagListDirty {
+      border-color: $colorBorder2;
+    }
+
+    &:focus {
+      outline: none;
+    }
+  }
+
+  .buttonList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 0.5rem;
+  }
+}
+
+.button {
+  padding: 0.2rem $spacingQuarter;
+  border: 1px solid $colorBorder;
+
+  &:hover {
+    background-color: $colorBg2;
+  }
+
+  &[disabled] {
+    opacity: 0.5;
+    background-color: $colorBg2;
+    cursor: not-allowed;
+  }
+}
+
 .actions {
   display: flex;
   gap: $spacingQuarter;
 
   .button {
-    padding: 0.2rem $spacingQuarter;
-    border: 1px solid $colorBorder;
     width: 100%;
-
-    &:hover {
-      background-color: $colorBg2;
-    }
   }
 
   .deleteButton {
