--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -39,6 +39,8 @@ $colorBg2: #333;
 $colorBorder: #333;
 $colorBorder2: #555;
 
+$colorLink: #aaa;
+
 @mixin fontDefault() {
   font-family: "Lato", sans-serif;
 }
