add suggestions to search

--- a/src/app/listing/Search.module.scss
+++ b/src/app/listing/Search.module.scss
@@ -1,14 +1,59 @@
 @use "/src/scss/variables" as *;
 
 .Search {
+  position: relative;
+  max-width: 16rem;
+
   input {
     border: 1px solid $colorBorder;
     border-radius: 0.4rem;
     padding: 0 0.4rem;
+    width: 100%;
 
     &:focus {
       background-color: $colorBg2;
       outline: none;
     }
   }
+}
+
+.Suggestions {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 100%;
+  z-index: 20;
+  background: $colorBg2;
+  border: 1px solid $colorBorder;
+  border-radius: 0.4rem;
+  overflow: hidden;
+}
+
+.SuggestionMeta {
+  padding: 0;
+  font-size: 0.8rem;
+  opacity: 0.7;
+  padding: 0 0.4rem;
+}
+
+.Suggestion {
+  display: flex;
+  justify-content: space-between;
+  gap: $spacingQuarter;
+  padding: 0 0.4rem;
+  cursor: pointer;
+}
+
+.Active {
+  background: $colorBg;
+}
+
+.TagName {
+  font-weight: 500;
+}
+
+.TagMeta {
+  font-size: 12px;
+  opacity: 0.7;
+  white-space: nowrap;
 }
